--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -8,3 +8,15 @@ Willkommen
 {% block header %}
 
 {% endblock %}
+
+{% block body%}
+
+<div id="map">
+  <div id="heading">
+    <h1>Flows</h1>
+  </div>
+  <div id="inset">
+  </div>
+</div>
+
+{% endblock %}
