--- a/core/templates/core/master.html
+++ b/core/templates/core/master.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-social.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     {% block require %}
     <script data-main="{% static 'js/main.js' %}" src="{% static 'js/require.js' %}"></script>
@@ -17,20 +17,39 @@
             paths: {
                 'jQuery': 'jquery-3.2.1.min',
                 'boostrap': 'bootstrap.min',
+                'topojson': 'topojson.min',
+                'projection': 'd3.geo.projection.min',
+                'polyhedron': 'd3.geo.polyhedron',
+                'd3': 'd3',
                 'main': 'main',
             },
             shim: {
                 'jQuery': {
                     exports: '$',
                 },
+                'd3': {
+                    exports: 'd3',
+                },
                 'bootstrap': {
                     deps: ['jQuery']
+                },
+                'topojson': {
+                    deps: ['d3']
+                },
+                'projection': {
+                    deps: ['d3.global']
+                },
+                'polyhedron': {
+                    deps: ['d3.global']
                 },
                 'main': {
                     exports: '$',
                     deps: ['jQuery']
                 },
             }
+        });
+        define("d3.global", ["d3"], function(_) {
+          d3 = _;
         });
     </script>
   </head>
